Revised books 09G5, 17J8, and 17L2

--- a/Share/09G5.html
+++ b/Share/09G5.html
@@ -12,21 +12,44 @@ $title = '三首塔';
 $book = 'I09G5';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2011/4/8 (277K) 2013/7/12');
+ShowUpdbDownload('2023/4/13 (277K) 2013/7/12 2011/4/8');
 ShowPdbDownload('2009/12/27 (262K) 2013/7/12');
 ShowPrcDownload('2011/4/8 (269K) 2013/7/12');
-ShowEpubDownload('2011/4/8 (175K) 2013/7/12');
-ShowVEpubDownload('2013/7/12 (175K)');
+ShowEpubDownload('2023/4/13 (175K) 2013/7/12 2011/4/8');
+ShowVEpubDownload('2023/4/13 (175K) 2013/7/12');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝大歐整理製作。感謝Vivian勘誤。<br>
+好讀書櫃《經典版》，感謝大歐整理製作。感謝Vivian、Takeshichan/IT勘誤。<br>
 <br>
 金田一耕助探案，1955。<br>
 <br>
 三首塔內三尊木雕人頭像之間的恩怨情仇，竟然延績到後世子孫——佐竹家族的身上。音禰獲知自己即將繼承一位遠親——玄藏老人的百億圓遺產，條件是她必須和一位素未謀面的男人結婚……不料財產還沒繼承到，三樁殺人慘案就赫然在她眼前發生。整個家族霎時陷入一片爾虞我詐、腥風血海的殺戮戰場，百億圓財產變成一道催命符，誰有機會得到它，就可能成為下一名犧牲者！音禰在刺激、迷亂的情欲漩渦中沉淪，竟和擁有多重身分的神秘男子——堀井敬三為愛逃亡！這對落難鴛鴦在離散分合的逃亡過程中意外獲知三首塔的所在地，同時也歷經百分百驚險刺激的生死關頭。親密愛人的枕邊細語教人備感溫暖，愛上親密愛人的人卻是雙手血腥……<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Takeshichan/IT 2023/4/13)<br>
+問話的是人建彥舅舅。/問話的人是建彥舅舅。<br>
+等等力警官稍微猶豫一了下，/等等力警官稍微猶豫了一下，<br>
+一朵鮮花插在的牛糞上/一朵鮮花插在牛糞上<br>
+我不禁恨恨地瞪了/我不禁狠狠地瞪了<br>
+掘井/堀井　（共十六處）<br>
+緊身緊身褲/緊身褲<br>
+四處鬧晃/四處閒晃<br>
+令人作惡的男性體臭/令人作嘔的男性體臭<br>
+剛有志賀雷藏/剛才志賀雷藏<br>
+不禁有有些顧忌/不禁有些顧忌<br>
+古板史郎/古阪史郎　（共兩處）<br>
+暗地裡籌籌劃陰謀/暗地裡籌劃陰謀<br>
+發生意狀況/發生意外狀況<br>
+幾杯黃楊一下肚/幾杯黃湯一下肚<br>
+表演還沒始吧/表演還沒開始吧<br>
+也有同相的懷疑/也有相同的懷疑<br>
+堀井警三/堀井敬三<br>
+淚淚地流出/潸潸地流出<br>
+當日誌賀雷藏口吐鮮血/當日志賀雷藏口吐鮮血<br>
+就是有因為有這三顆頭顱/就是因為有這三顆頭顱<br>
+大好了！/太好了！<br>
+<br>
 (mPDB 2013/7/12)<br>
 傍徨不安/徬徨不安<br>
 以為自已擁有/以為自己擁有<br>
