--- a/book/17J8.html
+++ b/book/17J8.html
@@ -12,20 +12,78 @@ $title = '牛頓加農砲';
 $book = 'G17J8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/9/1 (492K)');
+ShowUpdbDownload('2023/4/13 (492K) 2017/9/1');
 ShowPrcDownload('2017/9/1 (506K)');
 ShowMobiDownload('2017/9/1 (1443K)');
-ShowEpubDownload('2017/9/1 (364K)');
-ShowVEpubDownload('2017/9/1 (365K)');
+ShowEpubDownload('2023/4/13 (364K) 2017/9/1');
+ShowVEpubDownload('2023/4/13 (365K) 2017/9/1');
 BookSectionEnd();
 ?>
 <img src="covers/17J8.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝JackJiang掃描原書整理製作，並提供掃描檔。譯者蔣鏡明。<br>
+好讀書櫃《典藏版》，感謝JackJiang掃描原書整理製作，並提供掃描檔。譯者蔣鏡明。感謝Gilbert勘誤。<br>
 <br>
 <b>非理性時代之一</b><br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/4/13)<br>
+坩禍/坩堝<br>
+為了取得某種錫萃取物︼﹂/為了取得某種錫萃取物。︼﹂<br>
+製造出賢者水銀︼/製造出賢者水銀。︼<br>
+十歲？︱︱時你說服我/十歲？︱︱當時你說服我<br>
+間到他呼吸/聞到他呼吸中<br>
+以基本微粒的概念取代典的四元素與三原質理論/以基本微粒的概念取代了古典的四元素與三原質理論<br>
+法國姥/法國佬<br>
+操_著/操著<br>
+給筆/鉛筆（共二處）<br>
+班傑明說。．/班傑明說。<br>
+躺在在/躺在<br>
+嗆入他的鼻子/嗆入她的鼻子<br>
+把紙條拿給我吧﹂/把紙條拿給我吧。﹂<br>
+她閉上雙眼/他閉上雙眼<br>
+她可以在船上打工/他可以在船上打工<br>
+注音力/注意力<br>
+批在身上/披在身上<br>
+衷心感謝你0/衷心感謝你。<br>
+解是一些事情/解釋一些事情<br>
+入已經泡在/人已經泡在<br>
+刻〗思對那/刻意對那<br>
+六沢高/六呎高<br>
+貓頭旗/貓頭鷹<br>
+去遵守這樣的誓言﹂/去遵守這樣的誓言︱︱﹂<br>
+方符式/方程式<br>
+一|直/一直<br>
+雨個整夜/兩個整夜<br>
+我才不信例/我才不信咧<br>
+當然也覺凱絲翠/當然也覺得凱絲翠<br>
+鞭躬/鞠躬<br>
+其也人/其他人<br>
+來倫的目的/來倫敦的目的<br>
+癒傷/瘀傷<br>
+發出滿意的聲響後走回她身/發出滿意的聲響後走回她身邊。<br>
+高能搶/高能槍<br>
+仔钿/仔細<br>
+親口告諸位/親口告訴諸位<br>
+也足在講童話嗎/也是在講童話嗎<br>
+克猜西/克蕾西<br>
+俊悄/俊俏<br>
+不用在乎了o /不用在乎了。<br>
+用一這種/用這種<br>
+球體實太誘人/球體本身太誘人<br>
+扣柙/扣押<br>
+撝住她的嘴/摀住她的嘴<br>
+不算菲麼/不算甚麼<br>
+坩鍋/坩堝（共二處）<br>
+以台抄寫機/以太抄寫機<br>
+安翠安/愛翠安（共八處）<br>
+註：出希臘神話故事/註：出自希臘神話故事<br>
+非出已願/非出己願<br>
+馬啼聲/馬蹄聲（共二處）<br>
+無舌/無言<br>
+湯瑪許/湯瑪士<br>
+蜿延/蜿蜒<br>
+以與F相對應的那台/以及與F相對應的那台<br>
+<br>
 (mPDB 2017/9/1)<br>
 修改標點 (數處)<br>
 直竄雲宵/直竄雲霄<br>
