--- a/book/17L2.html
+++ b/book/17L2.html
@@ -12,20 +12,150 @@ $title = '天使微積分';
 $book = 'G17L2';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/9/1 (544K)');
+ShowUpdbDownload('2023/4/13 (544K) 2017/9/1');
 ShowPrcDownload('2017/9/1 (563K)');
 ShowMobiDownload('2017/9/1 (1585K)');
-ShowEpubDownload('2017/9/1 (395K)');
-ShowVEpubDownload('2017/9/1 (395K)');
+ShowEpubDownload('2023/4/13 (395K) 2017/9/1');
+ShowVEpubDownload('2023/4/13 (395K) 2017/9/1');
 BookSectionEnd();
 ?>
 <img src="covers/17L2.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。<br>
+好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。感謝Gilbert勘誤。<br>
 <br>
 <b>非理性時代之二</b><br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/4/13)<br>
+幸免/倖免<br>
+klein Seite/Klein Seite<br>
+瞥扭/彆扭<br>
+坩鍋/坩堝（原書有誤）<br>
+跟據/根據<br>
+跟七歲以的幼童/跟七歲以下的幼童<br>
+讀書寫卞自/讀書寫字<br>
+遙遙頭/搖搖頭（共二處）<br>
+下得不這樣/不得不這樣<br>
+咬注嘴唇/咬住嘴唇<br>
+路易西安那的局勢﹂/路易西安那的局勢。﹂<br>
+舉著搶/舉著槍<br>
+叮著他/盯著他<br>
+乳酩/乳酪<br>
+一種可能性﹂/一種可能性。﹂<br>
+致命的武器︱︱高能槍/致命的武器︱︱高能槍。<br>
+人夜時/入夜時<br>
+居注/居住<br>
+聲音好像磨刀﹁找到妳了！﹂/聲音好像磨刀：﹁找到妳了！﹂<br>
+現化的情況/現在的情況<br>
+﹁沒錯﹂/﹁沒錯。﹂（共二處）<br>
+保注一城/保住一城<br>
+女爵午安o /：﹁女爵午安。<br>
+親王殿下F/親王殿下<br>
+另．一是透過實驗/另一種是透過實驗<br>
+有沒何提到/有沒有提到<br>
+身以一傾/身子一傾<br>
+迢團精魄/這團精魄<br>
+像是巨、有翼/像是巨大、有翼<br>
+多眼牛物/多眼生物<br>
+啊，牧師﹂/啊，牧師。﹂<br>
+親明好友/親朋好友<br>
+自是不是/自己是不是<br>
+他們並這樣想/他們並不這樣想<br>
+這^麼/這麼<br>
+火鉗夾注/火鉗夾住<br>
+鬆鄉/鬆綁<br>
+﹁不好﹂/﹁不好。﹂<br>
+嚇破瞻/嚇破膽（共二處）<br>
+﹁猶太區﹂/﹁猶太區。﹂<br>
+普通通房子/普通房子<br>
+Sepher Ha︱Razim/Sepher Ha-Razim（共九處）<br>
+凝望著他好一陣子．嘴角揚起神祕的微笑/凝望著他好一陣子，嘴角揚起神祕的微笑<br>
+卡羅魯斷/卡羅魯斯<br>
+杳理曼/查里曼<br>
+人幕之賓/入幕之賓<br>
+她︱歲就看過/她十歲就看過<br>
+天大使/天使<br>
+新臟/心臟<br>
+莫斯打/莫斯科<br>
+我就足知道/我就是知道<br>
+考暈/考量<br>
+很了不，/很了不起，<br>
+為裝成上帝/偽裝成上帝<br>
+怎麼知道第一批僕人後來不會/怎麼知道第二批僕人後來不會<br>
+熾大使/熾天使<br>
+波上頓/波士頓<br>
+﹁那就好﹂/﹁那就好。﹂<br>
+夕毒/歹毒<br>
+那個世界的關係﹂/那個世界的關係。﹂<br>
+震動的鼓面或音又/震動的鼓面或音叉<br>
+忍不懷疑/忍不住要懷疑<br>
+幾宇是/幾乎是<br>
+布怕區/布柏區<br>
+杞人憂天而/杞人憂天而已<br>
+﹁你是我朋友耶﹂/﹁你是我朋友耶。﹂<br>
+年蛵/年輕<br>
+怎快就可以/很快就可以<br>
+這可真是不妙﹂/這可真是不妙。﹂<br>
+牢輕/年輕<br>
+不揮得/不懂得<br>
+很多事情要思考﹂/很多事情要思考。﹂<br>
+看不清楚衛/看不清楚守衛<br>
+蘭它/蘭卡<br>
+黑子悶哼/黑鬍子悶哼<br>
+倫敦是大人得多/倫敦是大得多<br>
+搓了槎/搓了搓<br>
+會跟我們宣戰﹂/會跟我們宣戰。﹂<br>
+花班駿馬/花斑駿馬<br>
+他們人比較多：那房子裡的東西/他們人比較多。那房子裡的東西<br>
+學徙/學徒<br>
+尤金親干/尤金親王<br>
+希望有機會﹂/希望有機會。﹂<br>
+內容方向有所轉變︼/內容方向有所轉變。︼<br>
+憜圓/橢圓<br>
+不會動手反抗．。/不會動手反抗。<br>
+關丄門/關上門<br>
+戥進他胸口/戳進他胸口<br>
+科學優勢﹂/科學優勢。﹂<br>
+貴腐洒/貴腐酒<br>
+拓凱洒/拓凱酒<br>
+現住面對/現在面對<br>
+指揮宮/指揮官<br>
+絡於/終於<br>
+小班會意地點點/小班會意地點點頭。<br>
+偉大的沙皇﹂/偉大的沙皇。﹂<br>
+夾在腋下F/夾在腋下<br>
+又驚有喜/又驚又喜<br>
+也就是三以前/也就是三年以前，<br>
+惡很狠/惡狠狠<br>
+而目跟眼前這幾位/而且跟眼前這幾位<br>
+非常吊強/非常強<br>
+第一時間應/第一時間反應<br>
+﹁湯瑪斯．奈恩﹂/﹁湯瑪斯．奈恩。﹂<br>
+笑了一下亞/笑了一下<br>
+威尼斷/威尼斯<br>
+﹁都是水蒸氣﹂/﹁都是水蒸氣。﹂<br>
+﹁聽到了﹂/﹁聽到了。﹂<br>
+快帶我過去﹂/快帶我過去。﹂<br>
+各正言順/名正言順<br>
+高能搶/高能槍<br>
+唯行如此/唯有如此<br>
+曚住/矇住<br>
+檔了一刀/擋了一刀<br>
+會的客不是你話/會的客不是你的話<br>
+適含/適合<br>
+有將近一千年牢的共和/有將近一千年的共和<br>
+經驗老道/經驗老到（原書有誤）<br>
+悉窣/窸窣（原書有誤）<br>
+砰然心跳/怦然心跳（原書有誤）<br>
+僅遵陛下吩咐/謹遵陛下吩咐（原書有誤）<br>
+面漏讚許/面露讚許（原書有誤）<br>
+圓椎/圓錐（原書有誤）<br>
+嚴肅以特/嚴肅以待（原書有誤）<br>
+朋有/朋友（原書有誤）<br>
+擦間而過/擦肩而過（原書有誤）<br>
+聽見一個外國人英文頗使他訝異/聽見一個外國人說英文頗使他訝異（原書有誤）<br>
+跟跟小尼可一樣/跟小尼可一樣（原書有誤）<br>
+<br>
 (mPDB 2017/9/1)<br>
 按原書分隔場景<br>
 修改標點 (數處)<br>
