Initial upload of audibooks AB001 part 27 and AB002 parts 27-31

--- a/book/audioAB002.html
+++ b/book/audioAB002.html
@@ -33,6 +33,11 @@ PlayMP3('AB002-23', '第六篇《思舊賦（二）》劉小珍錄音 2023/3/25'
 PlayMP3('AB002-24', '第七篇《梁父吟（一）》劉小珍錄音 2023/4/6');
 PlayMP3('AB002-25', '第七篇《梁父吟（二）》劉小珍錄音 2023/4/6');
 PlayMP3('AB002-26', '第七篇《梁父吟（三）》劉小珍錄音 2023/4/6');
+PlayMP3('AB002-27', '第八篇《孤戀花（一）》劉小珍錄音 2023/4/13');
+PlayMP3('AB002-28', '第八篇《孤戀花（二）》劉小珍錄音 2023/4/13');
+PlayMP3('AB002-29', '第八篇《孤戀花（三）》劉小珍錄音 2023/4/13');
+PlayMP3('AB002-30', '第八篇《孤戀花（四）》劉小珍錄音 2023/4/13');
+PlayMP3('AB002-31', '第八篇《孤戀花（五）》劉小珍錄音 2023/4/13');
 
 ?>
 
