--- a/book/17L8.html
+++ b/book/17L8.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("葛雷克．凱斯《渾沌帝國》");
+SetTitle("葛雷克．凱斯【渾沌帝國】");
 SetLink('<a href="?M=hd&P=scifi-10">奇幻小說 書目</a>');
 </script>
 
@@ -12,20 +12,76 @@ $title = '渾沌帝國';
 $book = 'G17L8';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/9/1 (489K)');
+ShowUpdbDownload('2023/4/13 (489K) 2017/9/1');
 ShowPrcDownload('2017/9/1 (507K)');
 ShowMobiDownload('2017/9/1 (1432K)');
-ShowEpubDownload('2017/9/1 (357K)');
-ShowVEpubDownload('2017/9/1 (357K)');
+ShowEpubDownload('2023/4/13 (357K) 2017/9/1');
+ShowVEpubDownload('2023/4/13 (357K) 2017/9/1');
 BookSectionEnd();
 ?>
 <img src="covers/17L8.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。<br>
+好讀書櫃【典藏版】，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。感謝Gilbert勘誤。<br>
 <br>
 <b>非理性時代之三</b><br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/04/13)<br>
+坩鍋/坩堝（原書有誤）<br>
+黏髏頭/骷髏頭<br>
+女士o ﹂/女士。﹂<br>
+追縱/追蹤<br>
+﹁本來就不需要﹂/﹁本來就不需要！﹂<br>
+你應該是是/你應該是<br>
+法國倦/法國佬<br>
+好蟹見著你/好像沒見著你<br>
+他點跟納卡索打了招呼/了他點點頭跟納卡索打了招呼<br>
+沒他們找到/沒給他們找到<br>
+﹂富蘭克林回答﹁你也知道/﹂富蘭克林回答﹁：你也知道<br>
+大體上一的/大體上一樣的<br>
+走痛們中間/走在他們中間<br>
+瓦乍傑與講得相當好/瓦乍傑語講得相當好<br>
+我也不知知道/我也不知道你<br>
+雲翠安/愛翠安<br>
+union/Union<br>
+﹃巡聲﹄/﹃巡警﹄<br>
+富蘭克i了算是/富蘭克林聽了算是<br>
+上M船/上船<br>
+為什靡豕古人/為什麼蒙古人<br>
+產童/產量<br>
+翰躬/鞠躬<br>
+傅過去/傳過去<br>
+閬進/闖進<br>
+會糧接受/會慢慢接受<br>
+似乎相當定切羅基人會/似乎相當肯定切羅基人會<br>
+閫述/闡述<br>
+普萊柏§地問/普萊柏冷冷地問<br>
+要練習絕。/要練習打靶。<br>
+備圓/橢圓<br>
+對於我自己、的族人/對於我自己、我的族人<br>
+裝面飾村子/裝飾村子<br>
+柵攔/柵欄（共二處）<br>
+淡淡冷笑a/淡淡冷笑。<br>
+喘了馬腹/踹了馬腹<br>
+這楝樓/這棟樓<br>
+他眨了眨眼﹁小姐，/他眨了眨眼：﹁小姐，<br>
+分開來o /分開來。<br>
+第三十一章　先知/第三十二章　先知<br>
+第三十二章　克睿思/第三十三章　克睿思<br>
+侵侵蝕/侵蝕<br>
+十子形/十字形<br>
+準鷹/隼鷹<br>
+輕輕喉嚨/清清喉嚨（共二處，原書有誤）<br>
+攤塌/坍塌（原書有誤）<br>
+過去十年可我學得可多了/過去十年我學得可多了（原書有誤）<br>
+能多快就要有多快﹂/能多快就要有多快。﹂（原書有誤）<br>
+一聲戰壕/一聲戰嚎（原書有誤）<br>
+先生政要起草一份/先生正要起草一份（原書有誤）<br>
+至始自終/自始至終（原書有誤）<br>
+照我的只是去做/照我的指示去做（原書有誤）<br>
+三吋不爛之舌/三寸不爛之舌（原書有誤）<br>
+窸窸簌簌/窸窸窣窣（原書有誤）<br>
+<br>
 (mPDB 2017/9/1)<br>
 白晰/白皙<br>
 袓國/祖國<br>
