--- a/book/081110N10.html
+++ b/book/081110N10.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("倪匡《夜光》");
+SetTitle("倪匡【夜光】");
 SetLink('<a href="?M=hd&P=scifi-3">奇幻小說 書目</a>');
 </script>
 
@@ -12,19 +12,55 @@ $author = '倪匡';
 $title = '夜光'; 
 $book = 'J081110N10';
 ShowBookTitle() ;
-ShowUpdbDownload('2010/12/18 (171K) 2013/6/14');
+ShowUpdbDownload('2023/4/17 (171K) 2013/6/14 2010/12/18');
 ShowPdbDownload('2008/11/10 (165K) 2013/6/14');
 ShowPrcDownload('2010/12/18 (167K) 2013/6/14');
-ShowEpubDownload('2010/12/18 (113K) 2013/6/14');
-ShowVEpubDownload('2013/6/14 (113K)');
+ShowEpubDownload('2023/4/17 (113K) 2013/6/14 2010/12/18');
+ShowVEpubDownload('2023/4/17 (113K) 2013/6/14');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝怪頭整理製作。感謝狄雯、邱應琦勘誤。<br>
+<img src="covers/081110N10.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝怪頭整理製作。感謝狄雯、邱應琦、Henry勘誤。<br>
 <br>
 亞洲之鷹羅開系列 10：夜光<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Henry 2023/4/17)<br>
+卷曲/鬈曲<br>
+大！它眞的存在？/天！它眞的存在？<br>
+所以他更昂起頭來/所以他要昂起頭來<br>
+性於柔順/性子柔順<br>
+厚約一公分/厚約一公厘<br>
+他聽到門聲/他聽到開門聲<br>
+豐滿的臂部/豐滿的臀部<br>
+頓了頓/頓了一頓<br>
+她的艷臀/她的豐臀<br>
+把要討論的事/決定把要討論的事<br>
+椿/樁（多處）<br>
+相當高的上牆/相當高的土牆<br>
+異星入選定/異星人選定<br>
+神色更加惆然/神色更加惘然<br>
+大在增加/大大增加<br>
+掀住了一個/抓住了一個<br>
+初接觸/初次接觸<br>
+兩個政府海軍/兩國政府海軍<br>
+北緯三十六度至三十六度/北緯三十六度至三十七度<br>
+炫目/眩目<br>
+咄咄迫人/咄咄逼人<br>
+引擎傳來/引擎聲傳來<br>
+大接近/太接近<br>
+大小看/太小看<br>
+人了魔/入了魔<br>
+介人/介入<br>
+我要我的那個人/我要找的那個人<br>
+享態/事態<br>
+啟享/啟事<br>
+準備了潛艇/準備子潛艇<br>
+眉字/眉宇<br>
+上間空無一人的石室/一間空無一人的石室<br>
+控在石牆上/按在石牆上<br>
+<br>
 (mPDB 2013/6/14)<br>
 修正標點及斷行<br>
 喀斯托裡亞/喀斯托里亞<br>
