--- a/Share/1010490123.html
+++ b/Share/1010490123.html
@@ -12,13 +12,13 @@ $title = '喬治安娜街33號';
 $book = 'P1010490123';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/27');
-ShowEpubDownload('2023/3/27');
-ShowVEpubDownload('2023/3/27');
+ShowUpdbDownload('2023/4/20 2023/3/27');
+ShowEpubDownload('2023/4/20 2023/3/27');
+ShowVEpubDownload('2023/4/20 2023/3/27');
 BookSectionEnd();
 ?>
 <img src="covers/1010490123.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -64,5 +64,12 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Gilbert 2023/4/20)<br>
+寒喧/寒暄（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+一目瞭然/一目了然（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+螞蟮/螞蟻（共二處）<br>
+穿金引線/穿針引線（原書有誤）<br>
+伊莎貝兒/依莎貝兒（共四處，原書有誤）<br>
+﹁跟我說那個男生的事﹂。/﹁跟我說那個男生的事。﹂（原書有誤）<br>
 </font>
 </td></tr></table>
