Initial upload of audiobooks AB001 part 28 and AB002 parts 32-26

--- a/book/081110N10.html
+++ b/book/081110N10.html
@@ -20,7 +20,7 @@ ShowVEpubDownload('2023/4/17 (113K) 2013/6/14');
 BookSectionEnd();
 ?>
 <img src="covers/081110N10.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝怪頭整理製作。感謝狄雯、邱應琦、Henry勘誤。<br>
+好讀書櫃【典藏版】，感謝guinness提供原書掃瞄檔。感謝怪頭整理製作。感謝狄雯、邱應琦、Henry勘誤。<br>
 <br>
 亞洲之鷹羅開系列 10：夜光<br>
 <br>
