--- a/book/audioAB002.html
+++ b/book/audioAB002.html
@@ -38,6 +38,11 @@ PlayMP3('AB002-28', '第八篇《孤戀花（二）》劉小珍錄音 2023/4/13'
 PlayMP3('AB002-29', '第八篇《孤戀花（三）》劉小珍錄音 2023/4/13');
 PlayMP3('AB002-30', '第八篇《孤戀花（四）》劉小珍錄音 2023/4/13');
 PlayMP3('AB002-31', '第八篇《孤戀花（五）》劉小珍錄音 2023/4/13');
+PlayMP3('AB002-32', '第九篇《花橋榮記（一）》劉小珍錄音 2023/4/20');
+PlayMP3('AB002-33', '第九篇《花橋榮記（二）》劉小珍錄音 2023/4/20');
+PlayMP3('AB002-34', '第九篇《花橋榮記（三）》劉小珍錄音 2023/4/20');
+PlayMP3('AB002-35', '第九篇《花橋榮記（四）》劉小珍錄音 2023/4/20');
+PlayMP3('AB002-36', '第九篇《花橋榮記（五）》劉小珍錄音 2023/4/20');
 
 ?>
 
