Updated per reader feedbacks

--- a/Share/1010490118.html
+++ b/Share/1010490118.html
@@ -81,7 +81,7 @@ BookSectionEnd();
 <strong>勘誤表</strong>：<br>
 (Gilbert 2023/03/23)<br>
 一九六〇〇年/一九六〇年<br>
-江戶川亂步獎等多項獎項評審委現為日本推理文學大獎的評審委員/獎江戶川亂步獎等多項獎項評審委員，現為日本推理文學大獎的評審委員<br>
+江戶川亂步獎等多項獎項評審委現為日本推理文學大獎的評審委員/江戶川亂步獎等多項獎項評審委員，現為日本推理文學大獎的評審委員<br>
 體格這麼撞/體格這麼壯<br>
 有點是想請教/有點事想請教<br>
 魚是她到藥局/於是她到藥局<br>
