--- a/book/audioAB002.html
+++ b/book/audioAB002.html
@@ -43,6 +43,8 @@ PlayMP3('AB002-33', '第九篇《花橋榮記（二）》劉小珍錄音 2023/4/
 PlayMP3('AB002-34', '第九篇《花橋榮記（三）》劉小珍錄音 2023/4/20');
 PlayMP3('AB002-35', '第九篇《花橋榮記（四）》劉小珍錄音 2023/4/20');
 PlayMP3('AB002-36', '第九篇《花橋榮記（五）》劉小珍錄音 2023/4/20');
+PlayMP3('AB002-37', '第十篇《秋思（一）》劉小珍錄音 2023/4/27');
+PlayMP3('AB002-38', '第十篇《秋思（二）》劉小珍錄音 2023/4/27');
 
 ?>
 
