--- a/book/17M5.html
+++ b/book/17M5.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("葛雷克．凱斯《上帝之影》");
+SetTitle("葛雷克．凱斯【上帝之影】");
 SetLink('<a href="?M=hd&P=scifi-10">奇幻小說 書目</a>');
 </script>
 
@@ -12,20 +12,65 @@ $title = '上帝之影';
 $book = 'G17M5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/10/6 (430K)');
+ShowUpdbDownload('2023/4/27 (430K) 2017/10/6');
 ShowPrcDownload('2017/10/6 (435K)');
 ShowMobiDownload('2017/10/6 (1230K)');
-ShowEpubDownload('2017/10/6 (304K)');
-ShowVEpubDownload('2017/10/6 (304K)');
+ShowEpubDownload('2023/4/27 (304K) 2017/10/6');
+ShowVEpubDownload('2023/4/27 (304K) 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17M5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。<br>
+好讀書櫃【典藏版】，感謝chin223提供掃描檔。感謝JackJiang按掃描檔整理製作。譯者陳岳辰。感謝Gilbert勘誤。<br>
 <br>
 <b>非理性時代最終部</b><br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/4/27)<br>
+裡頭議摻雜了/裡頭應該摻雜了<br>
+Parlez︱vous/Parlez-vous<br>
+﹃謀位者﹂/﹃謀位者﹄<br>
+太湯之子/太陽之子<br>
+消息是我發的啊﹂/消息是我發的啊。﹂<br>
+我感覺到到/我感覺得到<br>
+就︱心殺死我/就會想殺死我<br>
+不打我知道/不打算讓我知道<br>
+鳔紅/鱷紅<br>
+撒這︱謊/撒這樣的謊<br>
+敲钃打鼓/敲鑼打鼓<br>
+皮虜/皮膚（共二處）<br>
+橋小/嬌小<br>
+希望蘭克林/希望富蘭克林<br>
+這是什科學服裝/這是什麼新的科學服裝<br>
+反到使我/反倒使我<br>
+東秉西/東西<br>
+消失a/消失。<br>
+槌著桌子/搥著桌子<br>
+﹁這是好主意/﹁這是好主意。﹂<br>
+把把盟軍/把盟軍<br>
+槌打/搥打（共二處）<br>
+不把槍下來/不把槍放下來<br>
+出岩警警告/出言警告<br>
+希縢文/希臘文<br>
+史提芬回答﹁那不一樣/史提芬回答：﹁那不一樣<br>
+一千跟針/一千根針<br>
+我覺得得/我覺得<br>
+妳^§有能力/妳應該有能力<br>
+所菪/所幸<br>
+戥進/戳進<br>
+有想小型的神盾/有小型的神盾<br>
+炯炳有神/炯炯有神<br>
+富蘭克林有嚷嚷/富蘭克林也嚷嚷<br>
+想像中中的/想像中的<br>
+想來就妳的/想來救妳的<br>
+柯威．奇託/柯威．奇托<br>
+門上船來輕敲聲/門上傳來輕敲聲（原書有誤）<br>
+卡斯第力昂/卡斯第利昂（共二處，原書有誤）<br>
+一搓白髮/一撮白髮（原書有誤）<br>
+竄位/篡位（共三處，原書有誤）<br>
+竄奪/篡奪（共二處，原書有誤）<br>
+想當然爾/想當然耳（原書有誤）<br>
+<br>
 (mPDB 2017/10/6)<br>
 或著/或者<br>
 跟本/根本<br>
