Revised books 1237 and 1010490080

--- a/Share/1010490080.html
+++ b/Share/1010490080.html
@@ -12,13 +12,13 @@ $title = '寂寞廚房的神秘香料';
 $book = 'P1010490080';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/27');
-ShowEpubDownload('2023/1/27');
-ShowVEpubDownload('2023/1/27');
+ShowUpdbDownload('2023/5/6 2023/1/27');
+ShowEpubDownload('2023/5/6 2023/1/27');
+ShowVEpubDownload('2023/5/6 2023/1/27');
 BookSectionEnd();
 ?>
 <img src="covers/1010490080.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作及提供掃瞄檔。感謝Jack Jiang勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -64,6 +64,124 @@ BookSectionEnd();
 荷蘭葛洛寧恩大學英語語言與文化碩士，主修文學。譯作有《玩命處方箋》、《失物之書》（圓神出版）、《鋼琴教師的情人》、《歸鄉路》、《她的對稱靈魂》、《一隻貓療癒一個家》、《失落的秘密手稿》等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Jack Jiang 2023/5/6)<br>
+艾麗莎．貝寶特 / 艾麗莎．貝賽特<br>
+靡大黑色防火裝 / 龐大黑色防火裝<br>
+止住了腳步。﹁亞伯喜歡妳喔 / 止住了腳步。﹁ (分段) 亞伯喜歡妳喔<br>
+我的心枰抨跳動 / 我的心怦怦跳動<br>
+這副黏髏 / 這副骷髏<br>
+伊傑說：﹁唬。﹂ / 伊傑說：﹁噓。﹂<br>
+︱是那份禮物 / ︱︱是那份禮物<br>
+尋找什麼也許在找 / 尋找什麼︱︱也許在找<br>
+刮擦的聲。 / 刮擦的聲音。<br>
+回家以．後 / 回家以後<br>
+距離献著它 / 距離瞅著它<br>
+其中﹁位 / 其中一位<br>
+評判棣準 / 評判標準<br>
+卡崔娜库存者 / 卡崔娜倖存者<br>
+再害我上課遲到了。﹂她喊道： / 再害我上課遲到了。﹂ (分段)她喊道：<br>
+而去丄尚中 / 而去；高中<br>
+他献著我 / 他瞅著我<br>
+他睨著葛瑞特其實這對 / 他睨著葛瑞特︱︱其實這對<br>
+簡稱Cappy或cap﹃n / 簡稱Cappy或Cap'n<br>
+«一撮愛︾ / ︽一撮愛︾<br>
+行，婉蜒登上/行，蜿蜒登上<br>
+﹁她的靴子 / 她的靴子<br>
+我有事要跟談一談 / 我有事要跟你談談<br>
+比以前更有還有趣。更聰明 / 比以前更有趣。還有更聰明<br>
+閃避上竄的火為了取暖 / 閃避上竄的火星。為了取暖<br>
+切特神父羅斯跟隊長 / 切特神父、羅斯跟隊長<br>
+潔兒那邊我來處理； / 潔兒那邊我來處理，<br>
+我懂妳意思。_﹂ / 我懂妳意思。﹂<br>
+替自己閩出 / 替自己闖出<br>
+nicllolas / nicholas<br>
+﹁這個﹂ / ﹁這個︱︱﹂<br>
+圓胖士女 / 圓胖女士 (原書有誤)<br>
+一疊羊毛毯子，。 / 一疊羊毛毯子。<br>
+最賽好拿這些去 / 最好拿這些去<br>
+跟船長在，一起 / 跟船長在一起<br>
+挨，小孩 / 欸，小孩<br>
+︿三間臥室的平房︶ / ︵三間臥室的平房︶<br>
+thewippamunker,com / thewippamunker.com<br>
+我一直希望你會過來看看看我 / 我一直希望你會過來看看我(原書有誤)<br>
+伊蓮去走 / 伊蓮去走的。﹂<br>
+他榜出手機 / 他撈出手機<br>
+她沒有回應我頓時羞愧起來 / 他沒有回應，我頓時羞愧起來<br>
+彷彿逾越了界線： / 彷彿逾越了界線。<br>
+成帕芒克人 / 威帕芒克人(原書有誤)<br>
+遭遇浴室牆壁 / 透過浴室牆壁<br>
+羅斯，製作的那頻 / 羅斯製作的那類<br>
+﹁威帕芒克愛紐奧良﹂ / ﹁威帕芒克愛紐奧良﹂。<br>
+塔莎！ / 塔莎︱︱<br>
+我們有個羸家出線囉 / 我們有個贏家出線囉<br>
+﹁對不起，法蘭絲，﹂我說 / ﹁對不起，法蘭絲，﹂我說，<br>
+藍色軟塾 / 藍色軟墊<br>
+給我、我用雙臂 / 給我。我用雙臂<br>
+幾個澧拜 / 幾個禮拜<br>
++A / A+<br>
+聲了聲肩 / 聳了聳肩<br>
+甩揮腳掌, / 甩揮腳掌，<br>
+任務之旅過世： / 任務之旅過世；<br>
+帕芒克人報︾ / ︽威帕芒克人報︾<br>
+永遠一^以 / 永遠可以<br>
+請見附檔。﹂ / 請見附檔。<br>
+太瘋狂了我們幫忙清空房子 / 太瘋狂了。維娜︵我們幫忙清空房子<br>
+草每小麥 / 草莓小麥<br>
+滑回我身邊來 / 滑回我身邊來。<br>
+蜂擁而來 / 我努力別去想那隻瘦骨嶙峋的半盲老狗，在冬季樹林裡會有多少可能的死法，但思緒就是蜂擁而來<br>
+發出撕聲 / 發出嘶聲<br>
+我剛剛叫 / 我剛剛回來的。<br>
+一路婉M / 一路蜿蜒<br>
+賞_ / 賞賜<br>
+威廉的像伙 / 威廉的傢伙<br>
+出借榧檯 / 出借櫃檯<br>
+手扶襴杆 / 手扶欄杆<br>
+是單纯的事物 / 是單純的事物<br>
+自助餐廒 / 自助餐廳<br>
+附擋 / 附檔<br>
+脖予 / 脖子<br>
+公寓/路走到克大樓 / 公寓一路走到威帕芒克大樓<br>
+绑馬尾 / 綁馬尾<br>
+是我在教教室學到的 / 是我在自然教室學到的<br>
+誰料得到啊叉起 / 誰料得到啊。﹂他叉起<br>
+醒來。、 / 醒來。<br>
+命名儀式﹂ / 命名儀式。<br>
+初初對 / 初對(原書有誤)<br>
+掠色的紋痕。 / 棕色的紋痕。<br>
+鳕魚角 / 鱈魚角<br>
+一則扇窗戶後面坐定， / 一則。她講話的時候，她就在第一扇窗戶後面坐定，<br>
+交握雙手 / 交握雙手。他說：﹁我們來弄吧。﹂<br>
+rose︱ells@roymedicalillustration.com / rose-ellen@roymedicalillustration.com<br>
+人生被擊冷 / 人生被擊垮<br>
+屏雀中選 / 雀屏中選(原書有誤)<br>
+山羊圍攔 / 山羊圍欄<br>
+灰樣濛 / 灰濛濛<br>
+紅色紡線掠、過她的眉毛 / 紅色紡線掠過她的眉毛<br>
+山軟巒 / 山巒<br>
+臉廳 / 臉龐<br>
+握握手時時 / 握握手時(原書有誤)<br>
+我根本不怪妳。﹂我說：﹁晚安嘍。﹂ / 我根本不怪妳。﹂(分段)我說：﹁晚安嘍。﹂<br>
+你一定是在開我玩笑吧。：﹂ / 你一定是在開我玩笑吧。﹂<br>
+綠眸+襯得 / 綠眸子襯得<br>
+藍碟交證廳 / 藍碟交誼廳<br>
+﹁如果她想要，她可以嚐嚐我。﹂波麗說：﹁噢，抱歉。﹂ / ﹁如果她想要，她可以嚐嚐我。﹂(分段)波麗說：﹁噢，抱歉。﹂<br>
+﹁岈，﹂她說， / ﹁呣，﹂她說，<br>
+大南擊打 / 大雨擊打<br>
+請在會後找我談談。﹂楚蒂邁上舞台， / 請在會後找我談談。﹂(分段)楚蒂邁上舞台，<br>
+木雕生物之間遊走︱︱,, / 木雕生物之間遊走︱︱<br>
+鼓著節瘤的腳踩 / 鼓著節瘤的腳踝<br>
+﹁感覺每天、每分鐘都要從零開始。﹂他對著她潮濕的髮絲說：﹁我當時無能為力。﹂ / ﹁感覺每天、每分鐘都要從零開始。﹂(分段)他對著她潮濕的髮絲說：﹁我當時無能為力。﹂<br>
+會賴出來 / 會蹦出來<br>
+你們介意在這裡閒晃一下嗎？﹂吉兒說：﹁ / 你們介意在這裡閒晃一下嗎？﹂(分段)吉兒說：﹁<br>
+待在那裡：︱談天說笑 / 待在那裡︱︱談天說笑<br>
+他把腦袋靠在吉兒的大腿上。﹁不是， / 他把腦袋靠在吉兒的大腿上。(分段)﹁不是，<br>
+進行的東西：，一個未完成的計畫 / 進行的東西︱︱一個未完成的計畫<br>
+所寫電郵的 / 所寫電郵的啟發。<br>
+我還在在芬威公園 / 我還在芬威公園(原書有誤)<br>
+小棒球頭盗 / 小棒球頭盔<br>
+佯裝耗異 / 佯裝詫異<br>
+她的眼睛又大又葛瑞特 / 她的眼睛又大又亮。葛瑞特<br>
+切塊鳳梨︱請把汁液瀝乾 / 切塊鳳梨，請把汁液瀝乾<br>
 </font>
 </td></tr></table>
