--- a/Share/1010490154.html
+++ b/Share/1010490154.html
@@ -22,7 +22,7 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-本書收錄了十一個短篇小品。作者以輕靈樸實的筆調在這十一篇作品中注入了他對人世間的悲憫及批判,以溫柔敦厚的聲調,代替聲嘶的吶喊。這點,在〈科學的不幸〉一篇中可清楚地見出。另外,他也對世人看重顏面的心態有深入的描繪,如〈悲喜劇〉中藉由主角鑽牛角尖的心態,烘托出「人」愛面子的潛意識。在〈遊子方言〉中更將它加以引申擴大而訴諸於外在的行動。看到主角半可先生汲汲欲以誇耀的行為來肯定自己的存在時,讀者或許會打從心底發出諷蔑之音。然而,這種人又豈只是活在紙上而已？在每個街頭、每種場合,放眼望去比比皆是。差別只在於有人存在意識深處,而有人表現於言談舉止。在〈謊言〉及〈易容者〉諸篇中也或多或少有這方面的描寫。一方面這已是普遍存在的人之常情,另一方面也可由此窺出作者對此種「人性」的不以為然。<br>
+本書收錄了十一個短篇小品。作者以輕靈樸實的筆調在這十一篇作品中注入了他對人世間的悲憫及批判，以溫柔敦厚的聲調，代替聲嘶的吶喊。這點，在〈科學的不幸〉一篇中可清楚地見出。另外，他也對世人看重顏面的心態有深入的描繪，如〈悲喜劇〉中藉由主角鑽牛角尖的心態，烘托出「人」愛面子的潛意識。在〈遊子方言〉中更將它加以引申擴大而訴諸於外在的行動。看到主角半可先生汲汲欲以誇耀的行為來肯定自己的存在時，讀者或許會打從心底發出諷蔑之音。然而，這種人又豈只是活在紙上而已？在每個街頭、每種場合，放眼望去比比皆是。差別只在於有人存在意識深處，而有人表現於言談舉止。在〈謊言〉及〈易容者〉諸篇中也或多或少有這方面的描寫。一方面這已是普遍存在的人之常情，另一方面也可由此窺出作者對此種「人性」的不以為然。<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
