--- a/book/1237.html
+++ b/book/1237.html
@@ -12,13 +12,15 @@ $title = '美食家';
 $book = 'H1237';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2012/4/15 (114K) 2012/10/19');
-ShowPdbDownload('2012/4/15 (111K) 2012/10/19');
-ShowPrcDownload('2012/4/15 (125K) 2012/10/19');
-ShowEpubDownload('2012/4/15 (93K) 2012/10/19');
+ShowUpdbDownload('2023/5/6 (114K) 2012/10/19 2012/4/15');
+ShowPdbDownload('2012/10/19 (111K) 2012/4/15');
+ShowPrcDownload('2012/10/19 (125K) 2012/4/15');
+ShowEpubDownload('2023/5/6 (93K) 2012/10/19 2012/4/15');
+ShowVEpubDownload('2023/5/6 (93K)');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。感謝Sylvia勘誤。<br>
+<img src="covers/1237.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝guinness參照原書整理校正過。感謝Gilbert提供掃瞄檔。感謝Sylvia, Gilbert勘誤。<br>
 <br>
 <b>作者簡介</b><br>
 <br>
@@ -45,7 +47,13 @@ BookSectionEnd();
 小說通過對一位嗜吃如命的吃客朱自冶的描繪，藝術地概括了建國以來幾個歷史階段的經驗教訓，具有深廣的歷史內涵與社會內容。朱自冶解放前是一個房屋資本家，除了吃一無所長。解放後，高小庭針對他這樣的「美食家」發起了「飯店革命」，從形式到內容採取了一系列革命行動。原以為可以阻止朱自冶紙醉金迷的生活，卻革去了飯店的傳統特色，革去了飯店的正常秩序和工作人員的事業心、責任感。朱自冶轉而與燒得一手好菜的孔碧霞結婚。困難時期，他只能以吃飽為最大享受。文革後，朱自冶又身價陡漲，當上烹飪學會會長。作品以人們的美食權利為切入口，通過朱自冶吃客生涯的一波三折，反映了國家歷史命運的變動脈搏，具有深遠的社會歷史意義。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/5/6)<br>
+︵左魚右巴︶/䰾（共十一處）<br>
+橋瑰/橋堍<br>
+讚和頌揚/讚嘆和頌揚<br>
+人們為觀止/人們嘆為觀止<br>
+<br>
 松鼠鮭魚/松鼠桂魚 (Sylvia 2012/10/19)<br>
 (原文本為桂魚無誤，勘誤表有誤。松鼠魚為名菜，多以桂魚為食材，故稱松鼠桂魚。)<br>
 <br>
