Initial upload of books 1010490172 and 1010490175

--- a/Share/1010490171.html
+++ b/Share/1010490171.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("娜汀．葛蒂瑪【偶遇者】");
-SetLink('<a href="?M=hd&P=fiction-7">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
@@ -24,7 +24,7 @@ BookSectionEnd();
 <br>
 在南非，一個炎炎夏日的午後，祖麗的車子在半路拋錨，當她遇見躺在車腹底下的修車工阿布杜，一段戀情從此展開。然而，阿布杜非法移民的身份卻使得這份愛幾乎難以為繼。祖麗不顧一切和阿布杜結了婚，隨著丈夫回到貧窮落後的阿拉伯沙漠。白人的血統、富家千金的身份形格勢拘，祖麗融入當地的生活遭遇前所未有的衝擊，她放下身段親近當地文化，贏得夫家人的尊敬。正當她沉浸在追逐沙漠的喜悅時，阿布杜仍一心一意想要回到歧視他的西方社會，兩人爆發衝突。<br>
 <br>
-諾貝爾文學得主娜汀‧葛蒂瑪以簡樸的文字及史詩般的筆法，藉著祖麗內心轉折，突顯、省思出種族、文化、宗教及身份認同等主題，展現宏偉的企圖；而強烈且直接描述周遭複雜的人際與社會關係，正視人性弱點，更深及人生價值與生命意義的多面向思考。<br>
+諾貝爾文學得主娜汀．葛蒂瑪以簡樸的文字及史詩般的筆法，藉著祖麗內心轉折，突顯、省思出種族、文化、宗教及身份認同等主題，展現宏偉的企圖；而強烈且直接描述周遭複雜的人際與社會關係，正視人性弱點，更深及人生價值與生命意義的多面向思考。<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
