Upload revised book 1010490148

--- a/Share/1010490148.html
+++ b/Share/1010490148.html
@@ -12,13 +12,13 @@ $title = '天城山奇案';
 $book = 'P1010490148';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/10');
-ShowEpubDownload('2023/5/10');
-ShowVEpubDownload('2023/5/10');
+ShowUpdbDownload('2023/5/16 2023/5/10');
+ShowEpubDownload('2023/5/16 2023/5/10');
+ShowVEpubDownload('2023/5/16 2023/5/10');
 BookSectionEnd();
 ?>
 <img src="covers/1010490148.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -50,5 +50,59 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Gilbert 2023/5/16)<br>
+剝其衣物，走物品/剝其衣物，運走物品<br>
+锲而不舍/鍥而不舍<br>
+遊計劃/遊覽計劃<br>
+随心所欲/隨心所欲（共二處）<br>
+經參加股東的工作.而當時常常利用的電話號碼/曾經參加股東的工作，而當時常常利用的電話號碼<br>
+桑山英已/桑山英己<br>
+带着/帶着（共三處）<br>
+二千七日/二十七日<br>
+百货公司/百貨公司<br>
+折腾/折騰<br>
+油腻/油膩（共二處）<br>
+時侯/時候<br>
+<br>
+必竟/畢竟（原書有誤）<br>
+箭步如飛/健步如飛（原書有誤）<br>
+像是被以勒緊脖子時/像是被勒緊脖子時（原書有誤）<br>
+老警/老刑警（共七處，原書有誤）<br>
+婉曲/彎曲（原書有誤）<br>
+想者也許就是/想著也許就是（原書有誤）<br>
+桑的動作/桑山的動作（原書有誤）<br>
+胸部彷彿受到壓迫般地有痛苦想/胸部彷彿受到壓迫般地痛苦（原書有誤）<br>
+伊牟田博的信件/伊牟田博助的信件（原書有誤）<br>
+連得絡上/連絡得上（原書有誤）<br>
+理經啊/經理啊（原書有誤）<br>
+我也覺很他/我也覺得他（原書有誤）<br>
+就來津山趕到東京/就從津山趕到東京（原書有誤）<br>
+未獲悲丈夫的死訊/未獲悉丈夫的死訊（原書有誤）<br>
+有一集死蒼蠅/有一隻死蒼蠅（原書有誤）<br>
+股票經濟人/股票經紀人（原書有誤）<br>
+又上外側及背部的屍斑/右上外側及背部的屍斑（原書有誤）<br>
+﹁好﹂/﹁好。﹂（原書有誤）<br>
+青木作/青木良作（原書有誤）<br>
+<br>
+週到/周到（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+寒喧/寒暄（共五處、原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+瀟洒/瀟灑（共二處、原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+<br>
+囘禮/回禮（書中用囘，此為異體字，製作讀友改為回，依其修正原則修改）<br>
+同家/回家（書中用囘，此為異體字，製作讀友改為回，勘誤時依其修正原則修改）<br>
+间憶/回憶（書中用囘，此為異體字，製作讀友改為回，勘誤時依其修正原則修改）<br>
+同答/回答（共四處。書中用囘，此為異體字，製作讀友改為回，勘誤時依其修正原則修改）<br>
+﹁嗽！好！/﹁哦！好！（依製作讀友之調整原則修改）<br>
+<br>
+﹁十里路嗎？﹄/﹁十里路嗎？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+住在那裏呢？﹄/住在那裏呢？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+一萬元太多了。﹄/一萬元太多了。﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+就睡在那邊吧？﹄/就睡在那邊吧？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+﹃我再說一次/﹁我再說一次(依製作讀友之第一引號、第二引號調整原則修改）<br>
+你方便嗎？﹄/你方便嗎？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+高昂一曲吧？﹄/高昂一曲吧？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+﹁我知道。﹄/﹁我知道。﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+如何進行呢？﹄/如何進行呢？﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
+大約拜了一小時。︙︙﹂/大約拜了一小時。︙︙﹄﹂(依製作讀友之第一引號、第二引號調整原則修改）<br>
 </font>
 </td></tr></table>
