--- a/Share/1010490203.html
+++ b/Share/1010490203.html
@@ -9,7 +9,7 @@ SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 require_once('show-book.php');
 $author = '沈謙';
 $title = '效法蕭伯納幽默';
-$book = 'P1010490201';
+$book = 'P1010490203';
 BookSectionBegin();
 ShowBookTitle();
 ShowUpdbDownload('2023/7/10');
@@ -17,8 +17,8 @@ ShowEpubDownload('2023/7/10');
 ShowVEpubDownload('2023/7/10');
 BookSectionEnd();
 ?>
-<img src="covers/1010490201.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。<br>
+<img src="covers/1010490203.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝Angela Huang整理製作，感謝邱五提供掃瞄檔。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
