--- a/Share/1010490201.html
+++ b/Share/1010490201.html
@@ -52,7 +52,7 @@ BookSectionEnd();
 <br>
 丁世佳<br>
 <br>
-以中英翻譯糊口十餘年，譯有《銀河便車指南》、《宇宙盡頭的餐廳》，現為無業遊民。<br>
+從事中英翻譯十餘年，譯有《銀河便車指南》、《宇宙盡頭的餐廳》。<br>
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
