--- a/book/1221.html
+++ b/book/1221.html
@@ -19,7 +19,7 @@ ShowEpubDownload('2012/3/8 (176K)');
 BookSectionEnd();
 ?>
 <img src="covers/1221.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝guinness參照原書整理校正過。<br>
+好讀書櫃《經典版》，感謝guinness參照原書整理校正過。<br>
 <br>
 <b>作者簡介</b><br>
 <br>
