Upload revised book 17N7

--- a/book/17N7.html
+++ b/book/17N7.html
@@ -12,15 +12,15 @@ $title = '利器';
 $book = 'E17N7';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/4/11 (329K) 2017/10/6');
+ShowUpdbDownload('2023/5/25 (329K) 2023/4/11 2017/10/6');
 ShowPrcDownload('2017/10/6 (349K)');
 ShowMobiDownload('2017/10/6 (978K)');
-ShowEpubDownload('2023/4/11 (238K) 2017/10/6');
-ShowVEpubDownload('2023/4/11 (238K) 2017/10/6');
+ShowEpubDownload('2023/5/25 (238K) 2023/4/11 2017/10/6');
+ShowVEpubDownload('2023/5/25 (238K) 2023/4/11 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17N7.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者張思婷。感謝Elva Lin/IT勘誤。<br>
+好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者張思婷。感謝Elva Lin/IT，Gilbert勘誤。<br>
 <br>
 <b>內容簡介：(Sharp Objects)</b><br>
 <br>
@@ -46,6 +46,37 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/5/25)<br>
+一腳賜開/一腳踢開<br>
+維他命E/維他命Ｅ(共二處，格式統一）<br>
+皮庸/皮膚<br>
+維護警整潔/維護警察局整潔<br>
+蓄方/警方<br>
+很．俊．悄/很．俊．俏<br>
+羅伯待/羅伯特<br>
+你覺這和她的案子/你覺得這和她的案子<br>
+撲敕簌/撲簌簌<br>
+對準寶的粉嫩肌膚/對準寶寶的粉嫩肌膚<br>
+又黑又點的夢/又黑又黏的夢<br>
+砭巴/眨巴<br>
+備眙/備胎<br>
+水蜜挑/水蜜桃<br>
+櫻挑/櫻桃（共二處）<br>
+保險捍/保險桿<br>
+大的石耳墜/大的鑽石耳墜<br>
+我什都不在乎/我什麼都不在乎<br>
+<br>
+自得意滿/志得意滿（原書有誤）<br>
+不急不徐/不疾不徐（原書有誤）<br>
+曾明發明一套語言系統/曾經發明一套語言系統（原書有誤）<br>
+隨邊找個人/隨便找個人（原書有誤）<br>
+涕泗縱橫/涕淚縱橫（原書有誤）<br>
+擺布/擺佈（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+<br>
+波本/波旁（共四處，全文統一）<br>
+標靶/鏢靶（共二處，全文統一）<br>
+迪安娜/狄安娜（全文統一）<br>
+<br>
 (Elva Lin/IT 2023/4/11)<br>
 待殊地點/特殊地點<br>
 迷你搭裙配平口小可愛/迷你裙搭配平口小可愛<br>
