Upload revised book 1010490204

--- a/Share/1010490204.html
+++ b/Share/1010490204.html
@@ -22,34 +22,40 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-抗戰勝利七十週年，特別發行賊道三癡先生對《去大後方》紀錄片與抗日歷史的珍貴談話。<br>
+穿越到萬曆四十年，既想吃喝玩樂，又想直線救國。<br>
 <br>
-◎二○○三年楊麟先生籌備拍攝《去大後方》紀錄片，南師對此事與抗日歷史的談話記錄。<br>
-◎內容除了南師個人的所見、所聞、所經歷外，頗有一些鮮為人知的人和事。<br>
-◎在輕鬆的回憶言談中，更不時流露出南式的幽默，令人莞薾。<br>
+沒錯，就是這麼一個充滿情趣和矛盾的故事。<br>
 <br>
-被南師稱為「民族孝子」的楊麟先生籌備拍攝《去大後方》向南師請益，隨後即製成紀錄片，於電視台多次播放，二○○四年南師於《去大後方》紀錄片前言的談話一併附錄於後。<br>
+本書以大明萬曆四十年為歷史背景，以紹興山陰縣讀書人家少年張原立志通過參加科舉考試曲線救國為主線，描寫了其在備考過程中的種種經歷。張原之父在開封周王府為小吏，張原平日與母親相依為命。家奴張大春與當地訟棍姚秀才勾結欲圖謀張家的田產，十五歲的張原利用自己的聰明才智挫敗了這一圖謀。為科舉中第，張原拜會稽王思任為師勤學八股文。後在一次秋日遊園邂逅了美麗的官宦小姐商澹然，一見鍾情，與其定親。<br>
 <br>
-現今歷史以一九三七年七月七日，日本人攻擊蘆溝橋為抗戰開始，但事實上，近代日本侵略中國至少要從一八九四年甲午戰爭開始，而一九三一年九月十八日，日本進軍瀋陽，占據整個東三省的「九一八事變」，造成東北青年組織義勇軍對日作戰，或轉往南方圖謀反攻，也是抗日的開始。<br>
+書中以懸念迭起又不失詼諧的情節向讀者展現了晚明江南風物之美和少年張原求學的歷程。晚明時期的飽學之士，如王思任、袁宏道、張岱等逐一登場，與故事情節形成渾然一體之勢。「雅騷」這一書名正體現了晚明社會的矛盾結合以及本書雅俗共賞的特點。<br>
 <br>
-經歷過抗日的人，都有自己的故事與經歷，賊道三癡先生因有機緣接觸到許多大歷史中的人和事，因此雖然僅只是回憶自己的所見所聞，卻能讓大家對那段期間的中國歷史增加一些不同角度的認識。譬如南先生在書中提到：<br>
-<br>
-．中國這一百年當中，有三個半可憐人，半個可憐人是孫中山，三個可憐人，第一個是袁世凱，第二是蔣介石，第三是毛澤東。<br>
-．杜月笙批評蔣介石兩句話，很有道理，這話拿來批評別人也一樣。他說：「蔣委員長不行啊！民主沒有度量，獨裁沒有膽量」。<br>
-．能夠發揮抗戰精神的是三部小說：《三國演義》、《精忠岳傳》、《水滸傳》，一般人都是受這幾部小說的影響，並不是儒家的大道理。抗戰能夠打下來，全民是靠這幾部小說的思想精神所支持的。<br>
-．中國實際上不是北伐而統一，是用謀略成功的統一，是用五十萬銀大洋買過來半個中國。<br>
-．抗日聖戰一開始宣佈「地不分東西南北，人不分男女老幼，必須全民奮起，不惜犧牲焦土抗戰」，這句名言是怎麼寫出來的？<br>
-．第一個獲知日本要打美國珍珠港的是當時中國軍統局戴雨農？通知美國後，美國人聽了哈哈大笑？今天美國CIA的特務組織，是受中國戴雨農這方面工作的影響？<br>
-二○一五年適逢抗戰勝利七十週年之際，特檢出南師談話紀錄印行，為歷史多留一筆見證。<br>
+（編按：目前原書只有簡體中文版本，於是製作讀友根據原書，為《好讀》編輯正體中文版本，故封面雖使用簡體中文，本電子書內容為正體中文，敬請留意。）<br>
 <br>
 <br>
 <strong>作者簡介：</strong><br>
 <br>
 賊道三癡<br>
 <br>
-一九一八年生於浙江省樂清縣，幼承庭訓，少習諸子百家。一生行跡奇特，常情莫測；四處奔波，化育無數。出版有儒、釋、道等各家五十多種著述，以其獨到的方式，引領新世代的人們直入文化的核心智慧，讓讀者更樂於瞭解歷史人文的博大精深。<br>
+原名鄭暉，江西上饒廣豐縣人。一九七二年一月十五日出生，摩羯座。十三歲隨父親遷往鷹潭，定居鷹潭市。<br>
 <br>
-先生二○一二年辭世，享年九十五歲。<br>
+一九八八年，還在上高中的鄭暉，感染一場大病，因病至殘，從此「行路需扶杖，宛如老朽；一推即倒，直似嬰兒」。三年後，他的父親因病去世。鄭暉自學中文專業，完成了大專學業。後來進入中鐵十四局南昌公司鷹潭四公司工作。<br>
+<br>
+鄭暉自稱「三癡」，因其愛好圍棋、讀書與寫作而自況。在《新民晚報》、《雜文報》、《中國鐵路文學》、《星火》等報紙雜誌發表散文、小說二十餘萬字。後來開始進行傳奇文學創作，為《圍棋報》寫小說專欄，常用筆名「蒼雪」。<br>
+<br>
+二〇〇四年，三癡將《冷暖玉楸枰》整理之后，改名為《灞陵雪》，在《中華傳奇》雜誌連載了六期。此後開始用筆名「三癡」將本文上傳網絡，發表在幻劍書盟、天涯、起點等網站。二〇〇五年三癡在《圍棋報》發表中篇圍棋小說《幻庵因碩西游記》。<br>
+<br>
+二〇〇七年在《中華傳奇》雜誌上發表中篇武俠小說《魂斷漏影刀》。<br>
+<br>
+二〇〇八年四月，三癡正式以筆名「賊道三癡」在起點中文網上傳歷史架空小說《皇家娛樂指南》。這是賊道三癡網絡成名作。<br>
+<br>
+二〇〇九年九月，在起點上傳歷史穿越小說《上品寒士》。該書奠定了三癡作為歷史名家的地位。二〇一一年四月，在起點上傳東方玄幻小說《丹朱》。三癡轉型之作。<br>
+<br>
+二〇一二年一月，在起點上傳歷史穿越小說《雅騷》。<br>
+<br>
+二〇一三年八月，《雅騷》實體書改名《活在晚明》出版上市。<br>
+<br>
+二〇一五年九月，作者賊道三癡因肝癌及併發轉移辭世。<br>
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
