Upload revised books 1010490177, 1010490185, and 1010490186

--- a/Share/1010490177.html
+++ b/Share/1010490177.html
@@ -12,13 +12,13 @@ $title = '永不回頭';
 $book = 'P1010490177';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/26');
-ShowEpubDownload('2023/6/26');
-ShowVEpubDownload('2023/6/26');
+ShowUpdbDownload('2023/6/27 2023/6/26');
+ShowEpubDownload('2023/6/27 2023/6/26');
+ShowVEpubDownload('2023/6/27 2023/6/26');
 BookSectionEnd();
 ?>
 <img src="covers/1010490177.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -62,5 +62,17 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/6/27)<br>
+第一桌子後方的人/第一，桌子後方的人不是<br>
+他查閱資料/他查閱資料。<br>
+關好提包﹁少校/關好提包。﹁少校<br>
+一丁點也沒有/一丁點也沒有。<br>
+就會三度看到這部黑連看三次不是好事/就會三度看到這部黑車，連看三次不是好事<br>
+丟在水溝的單沒有輪子的廢棄車輛/丟在水溝的單車、沒有輪子的廢棄車輛<br>
+克魯，史卡利/克魯．史卡利<br>
+司機說﹁我看到了。﹂/司機說：﹁我看到了。﹂<br>
+倨傲地排排站好/倨傲地排排站好。<br>
+按紐/按鈕（原書有誤）<br>
+客房有付酒水的小冰箱/客房有附酒水的小冰箱（原書有誤）<br>
 </font>
 </td></tr></table>
