--- a/Share/1010490185.html
+++ b/Share/1010490185.html
@@ -12,13 +12,13 @@ $title = '61小時';
 $book = 'P1010490185';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/5');
-ShowEpubDownload('2023/6/5');
-ShowVEpubDownload('2023/6/5');
+ShowUpdbDownload('2023/6/6 2023/6/5');
+ShowEpubDownload('2023/6/6 2023/6/5');
+ShowVEpubDownload('2023/6/6 2023/6/5');
 BookSectionEnd();
 ?>
 <img src="covers/1010490185.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -77,5 +77,22 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/6/6)<br>
+慵懶讓落/慵懶飄落<br>
+Mag︱lite/Mag-lite（共四處）<br>
+波雨頓鎮/波爾頓鎮<br>
+人口：12，261/人口：12,261<br>
+Don﹃t/Don't<br>
+警換上陣/替換上陣<br>
+喘了他一腳/踹了他一腳<br>
+in the bush.冒險追求/in the bush. 冒險追求<br>
+家辦的事務/家鄉的事務<br>
+pervitin/Pervitin<br>
+Birch　reduction/Birch reduction<br>
+B︱24/B-24<br>
+珍泥/珍妮<br>
+曾親到華氏一百四十度/曾飆到華氏一百四十度<br>
+抽抖/顫抖（原書有誤）<br>
+重量全押在柏拉圖身上/重量全壓在柏拉圖身上（原書有誤）<br>
 </font>
 </td></tr></table>
