--- a/Share/1010490186.html
+++ b/Share/1010490186.html
@@ -12,13 +12,13 @@ $title = '詩林散步';
 $book = 'P1010490186';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/19');
-ShowEpubDownload('2023/6/19');
-ShowVEpubDownload('2023/6/19');
+ShowUpdbDownload('2023/6/20 2023/6/19');
+ShowEpubDownload('2023/6/20 2023/6/19');
+ShowVEpubDownload('2023/6/20 2023/6/19');
 BookSectionEnd();
 ?>
 <img src="covers/1010490186.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝順麟整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -37,5 +37,9 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/6/20)<br>
+試者站立/試著站立<br>
+近乎灑/近乎瀟灑<br>
+談蕭灑/談瀟灑<br>
 </font>
 </td></tr></table>
