--- a/Share/1010490207.html
+++ b/Share/1010490207.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("柏楊【柏楊妙語（人生篇）】");
-SetLink('<a href="?M=hd&P=history-2">歷史煙雲 書目</a>');
+SetLink('<a href="?M=hd&P=wisdom-6">隨身智囊 書目</a>');
 </script>
 
 <table BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
