Upload revised books 1010490149 and 1010490178

--- a/Share/1010490149.html
+++ b/Share/1010490149.html
@@ -12,13 +12,13 @@ $title = '前朝夢憶：張岱的浮華與蒼涼';
 $book = 'P1010490149';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/17');
-ShowEpubDownload('2023/5/17');
-ShowVEpubDownload('2023/5/17');
+ShowUpdbDownload('2023/6/1 2023/5/17');
+ShowEpubDownload('2023/6/1 2023/5/17');
+ShowVEpubDownload('2023/6/1 2023/5/17');
 BookSectionEnd();
 ?>
 <img src="covers/1010490149.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Jose Chen整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Jose Chen整理製作，感謝chin223提供掃瞄檔。感謝Gilbert勘誤<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -49,6 +49,63 @@ BookSectionEnd();
 政治大學東亞研究所博士，現任教於世新大學，譯有《追尋現代中國》、《雍正王朝之大義覺迷》、《改變中國》、《康熙》、《天安門》等，校譯《太平天國》。<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/6/1)<br>
+∣∣/︱︱（共七十七處）<br>
+會督孩子/會督促孩子<br>
+鴉片°/鴉片。<br>
+對張岱來說， 歷代/對張岱來說，歷代<br>
+讀書、 反覆思索/讀書、反覆思索<br>
+追上 他們/追上他們<br>
+任務， 就是要/任務，就是要<br>
+急 轉直下/急轉直下<br>
+特 別適合/特別適合<br>
+我们/我們<br>
+曾說:﹁女戲/曾說：﹁女戲<br>
+﹁妙天下﹂。﹂/﹁妙天下﹂。<br>
+而張汝霖﹁入耳文立就﹂張岱認為這段/而張汝霖﹁入耳文立就﹂。張岱認為這段<br>
+能 鑽研/能鑽研<br>
+祖母朱恭人到紹興舅/祖母朱恭人到紹興看三舅<br>
+化姑丹/化妬丹<br>
+感到慢，/感到錯愕，<br>
+﹃呀!﹄/﹃呀！﹄<br>
+名之曰：﹁青山白雲﹂張岱說/名之曰：﹁青山白雲﹂。張岱說<br>
+殆天縱也!﹂/殆天縱也！﹂<br>
+朝網/朝綱<br>
+不亦晶映可愛了/不亦晶映可愛乎<br>
+遂開驕南望/遂開牖南望<br>
+留下簡短遺言﹁臣子大義自應/留下簡短遺言：﹁臣子大義自應<br>
+而靈也如此！﹂，/而靈也如此！﹂<br>
+張是否早計畫好/張岱是否早計畫好<br>
+類沛流離/顛沛流離<br>
+奇情杜康/寄情杜康<br>
+厲之人麻瘋病人︶/厲之人︵痲瘋病人︶<br>
+岱曰：﹁先世之渾樸/岱曰：﹃先世之渾樸<br>
+多所月日/多所月旦<br>
+與崇禎個人有開/與崇禎個人有關<br>
+對於歷史已有定論由於撰述之時/對於歷史已有定論︱︱由於撰述之時<br>
+發自個人的經驗這不僅出現在/發自個人的經驗︱︱這不僅出現在<br>
+｢食生不化/﹁食生不化<br>
+故不書。﹂，/故不書。﹂<br>
+能[往北/能往北<br>
+麻瘋女子/痲瘋女子<br>
+感概/感慨<br>
+一柱香/一炷香（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+冒險患難/冒險犯難（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+重覆/重複（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+游戲/遊戲（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+寒喧/寒暄（原書有誤，依劍輝前輩之錯別字表勘誤）<br>
+<br>
+為掘壕/為掘濠（上下文統一）<br>
+赧免/赦免（原書有誤）<br>
+熠燈生輝/熠熠生輝（原書有誤）<br>
+兩腳書廚/兩腳書櫥（原書有誤）<br>
+振濟饑民/賑濟饑民（原書有誤）<br>
+想一賭令人嘆為觀止的/想一睹令人嘆為觀止的（原書有誤）<br>
+而住快園。﹂/而住快園﹂。（原書有誤）<br>
+得銀二萬兩。﹂/得銀二萬兩﹂。（原書有誤）<br>
+﹁臭腐不堪聞。﹂/﹁臭腐不堪聞﹂。（原書有誤）<br>
+家世亦與俱下焉。﹄/家世亦與俱下焉。﹄﹂（原書有誤）<br>
+﹁所望於後之讀是書者。﹂/﹁所望於後之讀是書者﹂。（原書有誤）<br>
 </font>
 </td></tr></table>
