--- a/Share/1010490178.html
+++ b/Share/1010490178.html
@@ -12,13 +12,13 @@ $title = '臥底正義';
 $book = 'P1010490178';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/6/16');
-ShowEpubDownload('2023/6/16');
-ShowVEpubDownload('2023/6/16');
+ShowUpdbDownload('2023/6/17 2023/6/16');
+ShowEpubDownload('2023/6/17 2023/6/16');
+ShowVEpubDownload('2023/6/17 2023/6/16');
 BookSectionEnd();
 ?>
 <img src="covers/1010490178.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -56,5 +56,16 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(Gilbert 2023/6/17)<br>
+至少不能在外面開槍中央大廳的人太多/至少不能在外面開槍，中央大廳的人太多<br>
+Un peu，ma/Un peu, ma<br>
+嘉柏頓了一下/嘉柏頓了一下。（僅有一處缺少句號；另有三處標點符號正確）<br>
+Bel︱Air/Bel-Air<br>
+舷外之音/絃外之音<br>
+對，他開車/對，他開車。<br>
+I︱95/I-95<br>
+Hide one﹃s light/Hide one's light<br>
+偏辟/偏僻<br>
+我不會麼做/我不會這麼做（原書有誤）<br>
 </font>
 </td></tr></table>
