Upload revised book 1010490143

--- a/Share/1010490143.html
+++ b/Share/1010490143.html
@@ -12,13 +12,13 @@ $title = '鄰人的犯罪';
 $book = 'P1010490143';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/5/24');
-ShowEpubDownload('2023/5/24');
-ShowVEpubDownload('2023/5/24');
+ShowUpdbDownload('2023/6/1 2023/5/24');
+ShowEpubDownload('2023/6/1 2023/5/24');
+ShowVEpubDownload('2023/6/1 2023/5/24');
 BookSectionEnd();
 ?>
 <img src="covers/1010490143.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Wanyu整理製作，感謝邱五提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Wanyu整理製作，感謝邱五提供掃瞄檔。感謝Gilbert勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -53,6 +53,34 @@ BookSectionEnd();
 東吳大學日語系畢業，曾任職日本文摘、時報出版、錦繡文化。現為專職譯者。<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/6/1)<br>
+思索〈豔的表現/思索令人驚豔的表現<br>
+﹁我想，應該沒問題吧。/﹁我想，應該沒問題吧。﹂<br>
+掠過一絲/掠過一絲︵<br>
+所以我只要小心前進即可其實在灰塵密布的昏暗空間內匍匐前進/所以我只要小心前進即可。其實在灰塵密布的昏暗空間內匍匐前進<br>
+拾到車上的/拎到車上的<br>
+把那筆錢封裝起來。/把那筆錢封裝起來。﹂<br>
+鑲嵌性鑲嵌方格花紋玻璃/鑲嵌方格花紋玻璃<br>
+矗立著一道白色人影我急忙打開關掉的門燈/矗立著一道白色人影。我急忙打開關掉的門燈<br>
+溫杯子我循著如此單調的步驟/溫杯子︱︱我循著如此單調的步驟<br>
+簡單的詞彙.卻能溝通/簡單的詞彙，卻能溝通<br>
+壁紙換成明亮粉彩色走廊局部裝飾著精細木工/壁紙換成明亮粉彩色，走廊局部裝飾著精細木工<br>
+管理 員/管理員<br>
+一坏大的/一坪大的<br>
+這和殺人事件有什麼關係呢？/這和殺人事件有什麼關係呢？﹂<br>
+我只聽人說過。/我只聽人說過。﹂<br>
+﹁朋友﹂/﹃朋友﹄（共二處）<br>
+也是﹁Ｓｃｅｈｅｖａｚａｄｅ﹂的客人/也是﹃Ｓｃｅｈｅｖａｚａｄｅ﹄的客人<br>
+辭了﹁Ｓｃｅｈｅｖａｚａｄｅ﹂的工作/辭了﹃Ｓｃｅｈｅｖａｚａｄｅ﹄的工作<br>
+應該是繪理子的父親比較好。/應該是繪理子的父親比較好。﹂<br>
+他們切掉受重傷的手腳︙︙/他們切掉受重傷的手腳︙︙﹂<br>
+﹁壓抑﹂/﹃壓抑﹄<br>
+簡單檢查是不會出錯的。/簡單檢查是不會出錯的。﹂<br>
+不是嗎？﹂。/不是嗎？﹂<br>
+讓卜厲為外面還有人知道內情/讓他以為外面還有人知道內情<br>
+以﹁有警察﹂為，/以﹁有警察﹂為由，<br>
+看來生的也很辛苦/看來當醫生的也很辛苦<br>
+濕濃濃/濕漉漉
 </font>
 </td></tr></table>
